pilot/pkg/xds/testdata/benchmarks/strict.yaml
# Set up a Service associated with our proxy, which will run as 1.1.1.1 IP
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: proxy-service-instance
spec:
  hosts:
    - example.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 7070
      name: tcp
      protocol: TCP
    - number: 443
      name: https
      protocol: HTTPS
    - number: 9090
      name: auto
      protocol: ""
  resolution: STATIC
  endpoints:
    - address: 1.1.1.1
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
