pilot/pkg/xds/testdata/benchmarks/telemetry.extra.yaml
../../../../../manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
